13stacks/exercises/deques_randomized_queues/grader_output_v1
See the Assessment Guide for information on how to interpret this report.

ASSESSMENT SUMMARY

Compilation:  FAILED (27 errors, 4 warnings)
API:          FAILED (3 errors)

Findbugs:     No tests available for autograding.
PMD:          PASSED
Checkstyle:   No tests available for autograding.

Correctness:  No tests available for autograding.
Memory:       No tests available for autograding.
Timing:       No tests available for autograding.

Aggregate score: 0.00%
[Compilation: 5%, API: 5%, Findbugs: 0%, PMD: 0%, Checkstyle: 0%, Correctness: 60%, Memory: 10%, Timing: 20%]

ASSESSMENT DETAILS

The following files were submitted:
----------------------------------
7.7K Nov 21 05:00 Deque.java
2.1K Nov 21 05:00 Permutation.java
7.2K Nov 21 05:00 RandomizedQueue.java


********************************************************************************
*  COMPILING                                                                    
********************************************************************************


% javac Deque.java
*-----------------------------------------------------------
Deque.java:225: error: cannot find symbol
        while (!StdIn.isEmpty()) {
                ^
  symbol:   variable StdIn
  location: class Deque<Item>
  where Item is a type-variable:
    Item extends Object declared in class Deque
Deque.java:226: error: cannot find symbol
            String item = StdIn.readString();
                          ^
  symbol:   variable StdIn
  location: class Deque<Item>
  where Item is a type-variable:
    Item extends Object declared in class Deque
Deque.java:231: error: cannot find symbol
                StdOut.print(deque.removeFirst() + " ");
                ^
  symbol:   variable StdOut
  location: class Deque<Item>
  where Item is a type-variable:
    Item extends Object declared in class Deque
Deque.java:237: error: cannot find symbol
                StdOut.print(deque.removeLast() + " ");
                ^
  symbol:   variable StdOut
  location: class Deque<Item>
  where Item is a type-variable:
    Item extends Object declared in class Deque
Deque.java:239: error: cannot find symbol
            StdOut.print("(" + deque.size() + " left on queue): ");
            ^
  symbol:   variable StdOut
  location: class Deque<Item>
  where Item is a type-variable:
    Item extends Object declared in class Deque
Deque.java:241: error: cannot find symbol
                StdOut.printf("%s ", s);
                ^
  symbol:   variable StdOut
  location: class Deque<Item>
  where Item is a type-variable:
    Item extends Object declared in class Deque
Deque.java:243: error: cannot find symbol
            StdOut.println();
            ^
  symbol:   variable StdOut
  location: class Deque<Item>
  where Item is a type-variable:
    Item extends Object declared in class Deque
7 errors

% javac RandomizedQueue.java
*-----------------------------------------------------------
RandomizedQueue.java:43: warning: [unchecked] unchecked cast
        q = (Item[]) new Object[2];
                     ^
  required: Item[]
  found:    Object[]
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
RandomizedQueue.java:65: warning: [unchecked] unchecked cast
        Item[] temp = (Item[]) new Object[capacity];
                               ^
  required: Item[]
  found:    Object[]
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
RandomizedQueue.java:113: error: cannot find symbol
            return StdRandom.uniform(n) + first; // [first, last)
                   ^
  symbol:   variable StdRandom
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
RandomizedQueue.java:116: error: cannot find symbol
            return (StdRandom.uniform(n) + first) % q.length;
                    ^
  symbol:   variable StdRandom
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
RandomizedQueue.java:136: error: cannot find symbol
            indexPermutation = StdRandom.permutation(n);
                               ^
  symbol:   variable StdRandom
  location: class RandomizedQueue<Item>.ArrayIterator
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
RandomizedQueue.java:159: error: cannot find symbol
        StdOut.println("Print the queue using the Iterator:");
        ^
  symbol:   variable StdOut
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
RandomizedQueue.java:161: error: cannot find symbol
            StdOut.print(item + " ");
            ^
  symbol:   variable StdOut
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
RandomizedQueue.java:163: error: cannot find symbol
        StdOut.println();
        ^
  symbol:   variable StdOut
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
RandomizedQueue.java:182: error: cannot find symbol
        StdOut.println("Peek 3 samples randomly:");
        ^
  symbol:   variable StdOut
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
RandomizedQueue.java:184: error: cannot find symbol
            StdOut.print(" " + rq.sample());
            ^
  symbol:   variable StdOut
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
RandomizedQueue.java:186: error: cannot find symbol
        StdOut.println();
        ^
  symbol:   variable StdOut
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
RandomizedQueue.java:191: error: cannot find symbol
        StdOut.println("Dequeue 3 times:");
        ^
  symbol:   variable StdOut
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
10 errors
2 warnings

% javac Permutation.java
*-----------------------------------------------------------
Permutation.java:44: error: cannot find symbol
        while (!StdIn.isEmpty()) {
                ^
  symbol:   variable StdIn
  location: class Permutation
Permutation.java:45: error: cannot find symbol
            String s = StdIn.readString();
                       ^
  symbol:   variable StdIn
  location: class Permutation
Permutation.java:50: error: cannot find symbol
            StdOut.println(itr.next());
            ^
  symbol:   variable StdOut
  location: class Permutation
./RandomizedQueue.java:43: warning: [unchecked] unchecked cast
        q = (Item[]) new Object[2];
                     ^
  required: Item[]
  found:    Object[]
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
./RandomizedQueue.java:65: warning: [unchecked] unchecked cast
        Item[] temp = (Item[]) new Object[capacity];
                               ^
  required: Item[]
  found:    Object[]
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
./RandomizedQueue.java:113: error: cannot find symbol
            return StdRandom.uniform(n) + first; // [first, last)
                   ^
  symbol:   variable StdRandom
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
./RandomizedQueue.java:116: error: cannot find symbol
            return (StdRandom.uniform(n) + first) % q.length;
                    ^
  symbol:   variable StdRandom
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
./RandomizedQueue.java:136: error: cannot find symbol
            indexPermutation = StdRandom.permutation(n);
                               ^
  symbol:   variable StdRandom
  location: class RandomizedQueue<Item>.ArrayIterator
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
./RandomizedQueue.java:159: error: cannot find symbol
        StdOut.println("Print the queue using the Iterator:");
        ^
  symbol:   variable StdOut
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
./RandomizedQueue.java:161: error: cannot find symbol
            StdOut.print(item + " ");
            ^
  symbol:   variable StdOut
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
./RandomizedQueue.java:163: error: cannot find symbol
        StdOut.println();
        ^
  symbol:   variable StdOut
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
./RandomizedQueue.java:182: error: cannot find symbol
        StdOut.println("Peek 3 samples randomly:");
        ^
  symbol:   variable StdOut
  location: class RandomizedQueue<Item>
  where Item is a type-variable:
    Item extends Object declared in class RandomizedQueue
10 errors
2 warnings


================================================================


Checking the APIs of your programs.
*-----------------------------------------------------------
Deque: The file 'Deque.class' could not be found.

RandomizedQueue: The file 'RandomizedQueue.class' could not be found.

Permutation: The file 'Permutation.class' could not be found.

================================================================


ABORTING: either the compilation or API test failed.